--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "author": "Timur Borodin",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "body-parser": "^1.20.0",
+    "dotenv": "^16.0.2",
+    "express": "^4.18.1",
+    "mongoose": "^6.6.0"
   },
-    "devDependencies": {
+  "devDependencies": {
     "nodemon": "^2.0.19"
   }
 }
